Bug 1710324 - Don't specify background color on native scrollbar elements on Windows / Linux. r=Gijs
This allow the automatic scrollbar darkening logic to work without further
tweaks. We don't set appearance: none in any scrollbar on desktop (and we
support scrollbar-{width,color} to customize them anyways).

Differential Revision: https://phabricator.services.mozilla.com/D114696

UltraBlame original commit: 238a4cfcdc86eee1f73a4ccf486d689c05753f98

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -1,27 +1,26 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
-
-
+/* ===== xulscrollbars.css ==============================================
+  == Styles used by XUL scrollbar-related elements.
+  ======================================================================= */
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-@namespace html url("http://www.w3.org/1999/xhtml"); 
+@namespace html url("http://www.w3.org/1999/xhtml"); /* namespace for HTML elements */
 
-
+/* ::::: scrollbar ::::: */
 
 scrollbar {
   appearance: auto;
   -moz-default-appearance: scrollbar-horizontal;
   cursor: default;
-  background-color: #f0f0f0;
 }
 
 @media all and (-moz-overlay-scrollbars) {
   scrollbar[root="true"] {
     position: relative;
-    z-index: 2147483647; 
+    z-index: 2147483647; /* largest positive value of a signed 32-bit integer */
   }
 
   scrollbar:not([active="true"]),
@@ -35,7 +34,7 @@ scrollbar[orient="vertical"] {
   -moz-default-appearance: scrollbar-vertical;
 }
 
-
+/* ::::: slider - a thumb is inside  ::::: */
 slider {
   appearance: auto;
   -moz-default-appearance: scrollbartrack-horizontal;
@@ -46,11 +45,7 @@ slider[orient="vertical"] {
   -moz-default-appearance: scrollbartrack-vertical;
 }
 
-
-
-thumb {
-  background-color: #cdcdcd;
-}
+/* ::::: thumb (horizontal) ::::: */
 
 thumb[orient="vertical"] {
   appearance: auto;
@@ -64,17 +59,16 @@ thumb[orient="horizontal"] {
   min-width: 8px;
 }
 
-
+/* ::::: square at the corner of two scrollbars ::::: */
 
 scrollcorner {
   appearance: auto;
   -moz-default-appearance: scrollcorner;
   width: 16px;
   cursor: default;
-  background-color: -moz-Dialog;
 }
 
-
+/* ..... increment .... */
 
 scrollbarbutton[type="increment"] {
   appearance: auto;
@@ -86,7 +80,7 @@ scrollbar[orient="vertical"] > scrollbarbutton[type="increment"] {
   -moz-default-appearance: scrollbarbutton-down;
 }
 
-
+/* ..... decrement .... */
 
 scrollbarbutton[type="decrement"] {
   appearance: auto;
